把消息移到了底部tab上

--- a/www/partials/individual/coach-patients.html
+++ b/www/partials/individual/coach-patients.html
@@ -31,8 +31,8 @@
     </div>
     <!-- <a class="button button-icon icon ion-android-more-vertical" ng-click="openpopover($event)"></a> -->
   </div>  
-  <div ng-click="scrollTop()" ng-if="needtoTop" class="text-center" style="position: absolute;bottom:60px;right:15px;z-index:100;width:46px;height:46px;background-color:#11C1F3;border-radius:23px;box-shadow:1px 2px 4px #999;">
-    <i style="font-size:3.2em;color:#FFF" class="icon ion-android-arrow-up"></i>
+  <div ng-click="scrollTop()" ng-if="needtoTop" class="text-center" style="position: absolute;bottom:60px;right:15px;z-index:100;width:46px;height:46px;background-color:#11C1F3;border-radius:23px;box-shadow:1px 1px 3px #777;">
+    <i style="font-size:2.8em;color:#FFF;display: inline-block;margin-top:3px" class="icon ion-android-arrow-up"></i>
   </div>
   <div class="sub-bar-shadow"></div>
   <ion-content delegate-handle="myPatientScroll" class="has-subheader content-item-list" on-scroll="onScoll()">   
