--- a/www/partials/individual/coach.html
+++ b/www/partials/individual/coach.html
@@ -45,9 +45,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="coach-newpatients"></ion-nav-view>
   </ion-tab>  
 
-  <!-- <ion-tab title="通知" icon-off="ion-android-mail" icon-on="ion-android-mail"  badge="130" badge-style="badge-assertive" href="#/coach/message">
+  <ion-tab title="通知" icon-off="ion-android-mail" icon-on="ion-android-mail"  badge="13" badge-style="badge-assertive" href="#/coach/messages">
     <ion-nav-view name="coach-message"></ion-nav-view>
-  </ion-tab> -->
+  </ion-tab>
   <ion-tab title="我" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/coach/home">
     <ion-nav-view name="coach-me"></ion-nav-view>
   </ion-tab>
