--- a/www/partials/individual/messages.html
+++ b/www/partials/individual/messages.html
@@ -3,30 +3,31 @@
     <ion-nav-back-button class="button-icon ion-arrow-left-c">
     </ion-nav-back-button>
   </ion-nav-bar>  -->
-  <ion-nav-buttons side="left">
+<!--   <ion-nav-buttons side="left">
     <button class="button icon button-icon ion-arrow-left-c" ng-click="goToHome()"></button>
-  </ion-nav-buttons>
+  </ion-nav-buttons> -->
+  <div class="bar-shadow"></div>
   <ion-content start-y="300">
     <div class="list">
 
-      <a class="item item-icon-left" style="padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/messages/system">
+      <a class="item item-icon-left" style="height:64px;padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/coach/messages/system">
         <i class="icon ion-android-settings" ng-class="" style="color:#FFF;width:44px;height:44px;background-color:#11c1f3;margin-top:9px;padding-left:6px;border-radius:4px"></i>
         <span class="item-note">{{systemMessage.SendTime}}</span>
         <p style="color:#000">{{systemMessage.Title}}</p>
         <p style="width:90%">{{systemMessage.Description}}</p>    
       </a>
 
-      <a class="item item-icon-left" style="padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/messages/appointmant">
+      <a class="item item-icon-left" style="height:64px;padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/coach/messages/appointment">
         <i class="icon ion-android-calendar" ng-class="" style="color:#FFF;width:44px;height:44px;background-color:#e66767;margin-top:9px;padding-left:6px;border-radius:4px"></i>
         <span class="item-note">12月12日</span>
-        <p style="color:#000">预约信息</p>
+        <p style="color:#000">预约信息(写死)</p>
         <p style="width:90%">1234567</p>    
       </a>
 
-      <a class="item item-icon-left" style="padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/messages/某人">
+      <a class="item item-icon-left" style="height:64px;padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/coach/messages/某人">
         <i class="icon ion-android-settings" ng-class="" style="color:#FFF;width:44px;height:44px;background-color:#417D9A;margin-top:9px;padding-left:6px;border-radius:4px"></i>
         <span class="item-note">12月12日</span>
-        <p style="color:#000">someone</p>
+        <p style="color:#000">someone(写死)</p>
         <p style="width:90%">ABC</p>    
       </a>            
     </div>  
