--- a/www/css/style.css
+++ b/www/css/style.css
@@ -235,7 +235,7 @@ hr.list:after {
   display: block;
   /*-moz-box-shadow:0px 4px 5px #999;*/
   /*-webkit-box-shadow:0px 4px 5px #999;*/
-  box-shadow: 0 2.5px 4.5px rgba(0, 0, 0, 0.35);
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.35);
   /*box-shadow:0px 4px 5px #999;*/
   width: 100%;height:4px;
   background-color: transparent; 
@@ -248,7 +248,7 @@ hr.list:after {
 /*  -moz-box-shadow:0px 3px 4px #999;
   -webkit-box-shadow:0px 3px 4px #999;
   box-shadow:0px 3px 4px #999;*/
-  box-shadow: 0 2px 3.5px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
   width: 100%;height:3px;
   background-color: transparent; 
 }
@@ -257,9 +257,9 @@ hr.list:after {
   bottom: 46px;
   z-index:99;
   display: block;
-  box-shadow: -1px -1.5px 2.5px rgba(0, 0, 0, 0.3);
+  box-shadow: -1px -2px 2px rgba(0, 0, 0, 0.3);
   width: 100%;height:3px;
-  background-color: transparent; 
+  background-color: #f8f8f8; 
 }
 .badge1 {
   margin-top:5px;
