初步修改列表 用rootScope存储每一个列表中要上传的数据 最后在TaskList里面上传。 Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/addpatient/plan/taskList.html
+++ b/www/partials/addpatient/plan/taskList.html
@@ -5,7 +5,7 @@
 			</a>
 		</ion-nav-buttons>
 		<ion-nav-buttons side="secondary">
-			<button class="button button-icon ion-checkmark-round" ng-click="onClickBackward()" ng-if="isloaded"></button>
+			<button class="button button-icon ion-checkmark-round" ng-click="onClickSubmit()" ng-if="isloaded"></button>
 		</ion-nav-buttons>
 	</ion-nav-bar>
 	<div class="bar-shadow"></div>
