--- a/www/partials/individual/messages.html
+++ b/www/partials/individual/messages.html
@@ -1,34 +1,27 @@
 <ion-view hide-tabs view-title="消息" > 
-<!--   <ion-nav-bar class="bar-positive nav-title-slide-ios7">
-    <ion-nav-back-button class="button-icon ion-arrow-left-c">
-    </ion-nav-back-button>
-  </ion-nav-bar>  -->
-<!--   <ion-nav-buttons side="left">
-    <button class="button icon button-icon ion-arrow-left-c" ng-click="goToHome()"></button>
-  </ion-nav-buttons> -->
   <div class="bar-shadow"></div>
   <ion-content start-y="300">
     <div class="list">
 
       <a class="item item-icon-left" style="height:64px;padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/coach/messages/system">
-        <i class="icon ion-android-settings" ng-class="" style="color:#FFF;width:44px;height:44px;background-color:#11c1f3;margin-top:9px;padding-left:6px;border-radius:4px"></i>
+        <i class="icon ion-android-settings" style="color:#FFF;width:44px;height:44px;background-color:#11c1f3;margin-top:9px;padding-left:6px;border-radius:4px"></i>
         <span class="item-note">{{systemMessage.SendTime}}</span>
         <p style="color:#000">{{systemMessage.Title}}</p>
         <p style="width:90%">{{systemMessage.Description}}</p>    
       </a>
 
       <a class="item item-icon-left" style="height:64px;padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/coach/messages/appointment">
-        <i class="icon ion-android-calendar" ng-class="" style="color:#FFF;width:44px;height:44px;background-color:#e66767;margin-top:9px;padding-left:6px;border-radius:4px"></i>
-        <span class="item-note">12月12日</span>
-        <p style="color:#000">预约信息(写死)</p>
-        <p style="width:90%">1234567</p>    
+        <i class="icon ion-android-calendar" style="color:#FFF;width:44px;height:44px;background-color:#e66767;margin-top:9px;padding-left:6px;border-radius:4px"></i>
+        <span class="item-note">{{appointmentMessage.SendTime}}</span>
+        <p style="color:#000">{{appointmentMessage.Title}}</p>
+        <p style="width:90%">{{appointmentMessage.Description}}</p>    
       </a>
 
-      <a class="item item-icon-left" style="height:64px;padding-top:10px;padding-bottom:10px;padding-left:66px" href="#/coach/messages/某人">
-        <i class="icon ion-android-settings" ng-class="" style="color:#FFF;width:44px;height:44px;background-color:#417D9A;margin-top:9px;padding-left:6px;border-radius:4px"></i>
-        <span class="item-note">12月12日</span>
-        <p style="color:#000">someone(写死)</p>
-        <p style="width:90%">ABC</p>    
+      <a class="item item-icon-left" ng-repeat="message in patientsMessages" style="height:64px;padding-top:10px;padding-bottom:10px;padding-left:66px" ng-click="gotoChatDetail(message)">
+        <i class="icon ion-android-chat" style="color:#FFF;width:44px;height:44px;background-color:#417D9A;margin-top:9px;padding-left:6px;border-radius:4px"></i>
+        <span class="item-note">{{message.SendTime}}</span>
+        <p style="color:#000">{{message.SenderName}}</p>
+        <p style="width:90%">{{message.Description}}</p>    
       </a>            
     </div>  
   </ion-content>     
